fix: table background and header colors for improved contrast

--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -98,8 +98,8 @@ $card-box-shadow: none;
 $enable-dark-mode: true;
 
 // === TABLES ===
-$table-bg: $gray-50;
-$table-header-bg: $gray-200;
+$table-bg: $light;
+$table-header-bg: $gray-400;
 $table-header-color: $gray-900;
 $table-border-color: $gray-400;
 $table-row-hover-bg: color.mix($primary, $gray-100, 10%);
